--- a/Left_Field_Labs/index.html
+++ b/Left_Field_Labs/index.html
@@ -25,17 +25,19 @@
 	d3script.src = "http://d3js.org/d3.v3.min.js";
 	var svgExists = false;
 
-// when the window loads create an input, put it on the page, and listen for when someone presses enter to re-run the function calculating distances from the value entered to our given locations
+// when the window loads create an input, put it on the page, and listen for when the user presses enter to re-run the function calculating distances from the value entered to the given locations
 	window.onload = function() {
 		var body = document.body || document.getElementsByTagName("body")[0];
 		var addressInput = document.createElement("input");
 		addressInput.type = "text";
 		addressInput.value = LFL;
 		addressInput.style.display = "block";
+		addressInput.style.width = "350px";
+		addressInput.style.height = "20px";
 		body.insertBefore(addressInput, body.firstChild);
 		addressInput.onkeypress = function(event) {
 			if (event.keyCode == 13) {
-				// the String Address they enter is what we'll call our function rank distance with
+				// the function rank_distance is called with the user entered Address 
 				rank_distances(this.value);
 			} 
 		}
@@ -45,7 +47,7 @@
 
 	function rank_distances(from) {
 		var originalLoc;	
-		// this countdownObj is only necessary since we have multiple async calls to setDistance which we are waiting for.  Every async call that finishes call countDownObj.check() and decrement countDownObj.count from locations.length to 0, when we hit 0, sort our locations array, if we haven't drawn the SVG, draw it, if we have, we only need to redraw the chart.
+		// countdownObj is only necessary since there are multiple async calls to setDistance which might not have finished.  For every async call that finishes call countDownObj.check() and decrement countDownObj.count by 1 from locations.length to 0. If the count reaches 0, sort the locations array, and if the SVG has not been drawn, draw it, if it has, redraw the chart.
 		var countDownObj = {
 	    count: locations.length,
 	    check: function() {
@@ -53,27 +55,28 @@
 	        if (this.count == 0) this.sortPlaces();
 	    },
 	    sortPlaces: function() {
-	    	// we never want to change the order of locations, we just want to use it to draw the chart
+	    	// copy the locations array to avoid changing the order of locations and use it to draw the chart.
 	    	var sorted = locations.slice(0).sort(function(a,b) {
 	    		return a.distance > b.distance;
 	    	});
 	    	if (!svgExists) {
 	    		head.insertBefore(d3script, head.firstChild);
+	    		// both d3 and the array of distances must exist before calling d3_init
 	    		d3script.onload = function() { 
 	    			d3_init(sorted);
-	    			svgExists = true; }
+	    			svgExists = true; 
+	    		}
 	    	} else {
-	    			redraw(locations);
+	    			redraw(sorted);
 	    	}
 	    }
 		};
 		calculateDistance();
 		function calculateDistance() {
-			// here we geocode the LatLng of the address passed in.  Once that returns, call distance check for each location.
+			// geocode the LatLng of the address passed in.  Once that returns, call distance check for each location.
 			geocoder.geocode( { 'address': from }, function(results, status) {
 				if (status == google.maps.GeocoderStatus.OK) {
 					originalLoc = results[0].geometry.location;
-					// for each of our locations call distanceCheck to add a distance property to each obj
 					for (var i = 0; i < locations.length; i++) {
 						distanceCheck(i);
 					}
@@ -89,49 +92,43 @@
 					// set the distance property to the result of distanceBetween this location and the original location
 					locations[index].LatLng = results[0].geometry.location;
 					setDistance(locations[index]);
-					// locations[index].distance =	distanceBetween(results[0].geometry.location);
 				} else {
 					console.log("One of our addresses is wrong.");
 				}
 			});
 		}
  		function distanceCheck(index) {
- 			// here we check whether we've already found the LatLng's for our static locations
- 			// if we have, set the distance
- 			// if we haven't compute latLng
+ 			// check whether the LatLng's for the static locations exist
+ 			// if yes, set the distance
+ 			// if not, compute latLng
  			var loc = locations[index];
  			if (loc.LatLng) {
  				setDistance(loc);
  			} else {
- 				findLatLng(loc.place, index)
+ 				findLatLng(loc.place, index);
  			}
  		}
  		function setDistance(location) {
  			location.distance = google.maps.geometry.spherical.computeDistanceBetween(originalLoc, location.LatLng);
- 			// check whether that's all of our locations
+ 			// check whether that is all of the locations
  			countDownObj.check();
  		}
 	}
 	// d3 stuff
-	function d3_init(data) {
-		var height = 400;
-		var width = locations.length * 100;
+	function d3_init(locations) {
+		var height = 460;
+		var width = locations.length * 100 + 20;
+		var to_miles = .00062137;
+
 		var svg = d3.select("body").append("svg")
 			.attr("height", height)
 			.attr("width", width);
-
-		var text = svg.append("text")
-			.attr("class", "place")
-			.attr("x", 0)
-			.attr("y", 20);
-
-		drawChart(data);
-	}
-	function drawChart(locations) {
-		console.log(JSON.stringify(locations), "locations");
-		var height = 400;
-		var to_miles = .00062137;
-		var text = d3.select("text");
+			
+		// distanceBox is used to display the distance in miles on mouseover
+		var distanceBox = svg.append("text")
+			.attr("class","distance")
+			.attr("y", 30);
+		
 		var barScale = d3.scale.linear()
 		    .domain([0, d3.max(locations.map(function(loc) { return loc.distance }))])
 		    .range([height, 0]);
@@ -139,21 +136,23 @@
 		var colorScale = d3.scale.category10();
 
 		var bar = d3.select('svg').selectAll("g")
-			.data(locations)
+			.data(locations, function(d) {
+				return d.place;
+			})
 			.enter()
 			.append("g")
-			.attr("transform", function(d,i) { return "translate(" + i*100 + ",0)" })
 			.on("mouseover", function(d) {
 				d3.select(this.children[0])
-				.attr("opacity", .5)
-				.classed("active", true);
-				text.text(d.place + " - " + (d.distance*to_miles).toLocaleString() + " mi");
+					.attr("opacity", .5)
+					.classed("active", true);
+
+				distanceBox.text((d.distance*to_miles).toLocaleString() + " mi")
 			})
 			.on("mouseout", function(d) {
 				d3.select(".active")
-				.attr("opacity", 1)
-				.classed("active", false);
-				text.text("");
+					.attr("opacity", 1)
+					.classed("active", false);
+				distanceBox.text("");
 			});
 
 		bar.append("rect")
@@ -164,27 +163,50 @@
 			.transition()
 			.duration(1000)
 			.attr("y", function(d) { return barScale(d.distance)})
+			.attr("x", function(d,i) { return i*100 +20; })
 			.attr("height", function(d) { return height - barScale(d.distance)})
 			.attr("width", 77)
 			.attr("fill", function(d,i) { return colorScale(i)});
-		} 
-		function redraw(locations) {
-			var height = 400;
-			var barScale = d3.scale.linear()
-			    .domain([0, d3.max(locations.map(function(loc) { return loc.distance }))])
-			    .range([height, 0]);
 
-			d3.selectAll("rect")
-				.data(locations)
-				.transition()
-				.duration(1000)
-				.attr("y", function(d) {
-					return barScale(d.distance);
-				})
-				.attr("height", function(d) {
-					return height - barScale(d.distance);
-				});
-		}
+		bar.append("text")
+			.attr("y", height - 3)
+			.attr("x", function(d,i) { return ((i*100)+14) })
+			.attr("transform", function(d,i) { return "rotate(270 "+ ((i*100)+14) + "," + (height - 3) + ")"; })
+			.text(function(d) { return d.place; });
+	}
+
+	function redraw(locations) {
+		var height = 460;
+		var barScale = d3.scale.linear()
+		    .domain([0, d3.max(locations.map(function(loc) { return loc.distance }))])
+		    .range([height, 0]);
+
+		d3.selectAll("g")
+			.data(locations, function(d) {
+				return d.place;
+			})
+			.select("text")
+			.transition()
+			.duration(1000)
+			.attr("x", function(d,i) { return ((i*100)+14) })
+			.attr("transform", function(d,i) { return "rotate(270 "+ ((i*100)+14) + "," + (height - 3) + ")"; });
+
+		d3.selectAll("rect")
+			.data(locations, function(d) {
+				return d.place;
+			})
+			.transition()
+			.duration(1000)
+			.attr("y", function(d) {
+				return barScale(d.distance);
+			})
+			.attr("x", function(d,i) {
+				return i*100 + 20;
+			})
+			.attr("height", function(d) {
+				return height - barScale(d.distance);
+			});
+	}
 })();
 	
 	</script>
