--- a/Left_Field_Labs/index.html
+++ b/Left_Field_Labs/index.html
@@ -57,7 +57,7 @@
 	    sortPlaces: function() {
 	    	// copy the locations array to avoid changing the order of locations and use it to draw the chart.
 	    	var sorted = locations.slice(0).sort(function(a,b) {
-	    		return a.distance > b.distance;
+	    		return a.distance - b.distance;
 	    	});
 	    	if (!svgExists) {
 	    		head.insertBefore(d3script, head.firstChild);
@@ -115,9 +115,11 @@
  		}
 	}
 	// d3 stuff
+	var width = +window.innerWidth - 80;
+	var barWidth = width/locations.length;
+	var height = +window.innerHeight - 100;
+
 	function d3_init(locations) {
-		var height = 460;
-		var width = locations.length * 100 + 20;
 		var to_miles = .00062137;
 
 		var svg = d3.select("body").append("svg")
@@ -164,22 +166,21 @@
 			.transition()
 			.duration(1000)
 			.attr("y", function(d) { return barScale(d.distance)})
-			.attr("x", function(d,i) { return i*100 +20; })
+			.attr("x", function(d,i) { return i*barWidth + 20; })
 			.attr("height", function(d) { return height - barScale(d.distance)})
-			.attr("width", 77)
+			.attr("width", barWidth - 20)
 			.attr("fill", function(d,i) { return colorScale(i)});
 
 		bar.append("text")
 			.attr("y", height - 3)
-			.attr("x", function(d,i) { return ((i*100)+14) })
-			.attr("transform", function(d,i) { return "rotate(270 "+ ((i*100)+14) + "," + (height - 3) + ")"; })
+			.attr("x", function(d,i) { return ((i*barWidth)+14) })
+			.attr("transform", function(d,i) { return "rotate(270 "+ ((i*barWidth)+14) + "," + (height - 3) + ")"; })
 			.attr("font-family", "Helvetica")
 			.attr("font-size", 14)
 			.text(function(d) { return d.place; });
 	}
 
 	function redraw(locations) {
-		var height = 460;
 		var barScale = d3.scale.linear()
 		    .domain([0, d3.max(locations.map(function(loc) { return loc.distance }))])
 		    .range([height-20, 0]);
@@ -191,8 +192,8 @@
 			.select("text")
 			.transition()
 			.duration(1000)
-			.attr("x", function(d,i) { return ((i*100)+14) })
-			.attr("transform", function(d,i) { return "rotate(270 "+ ((i*100)+14) + "," + (height - 3) + ")"; });
+			.attr("x", function(d,i) { return ((i*barWidth)+14) })
+			.attr("transform", function(d,i) { return "rotate(270 "+ ((i*barWidth)+14) + "," + (height - 3) + ")"; });
 
 		d3.selectAll("rect")
 			.data(locations, function(d) {
@@ -204,7 +205,7 @@
 				return barScale(d.distance);
 			})
 			.attr("x", function(d,i) {
-				return i*100 + 20;
+				return i*barWidth + 20;
 			})
 			.attr("height", function(d) {
 				return height - barScale(d.distance);
